# scalix

./: pyproject.toml
notes/: gpu_notes.md  note_1.md
scalix/: distributed.py  utils.py
scalix/components/: ring_attention.py
scalix/parallel/tensor_parallel/: collectives.py  functional.py
